day 15, part 2 takes 1h20min to complete