@@ -37,4 +37,7 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+	minHeapSize = "128m" // initial heap size
+	maxHeapSize = "8192m" // maximum heap size
+	jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM
 }
